--- a/src/LandingPage/LogIn/login.css
+++ b/src/LandingPage/LogIn/login.css
@@ -1,151 +1,153 @@
-.login-modal {
-  position: absolute;
-  width: 325px;
-  height: 350px;
-  left: 50%;
-  right: 50%;
-  transform: translate(-50%, 0%);
-  top: 33%;
-  z-index: 100;
-  background: #FFFFFF;
-  box-shadow: 0px 0px 50px 
-    rgba(0,0,0,0.2);
-  border-radius: 7px;
+@media only screen and (max-width: 599px) {
+
+  .login-modal {
+    position: absolute;
+    width: 325px;
+    height: 350px;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+    top: 33%;
+    z-index: 100;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 50px 
+      rgba(0,0,0,0.2);
+    border-radius: 7px;
+  }
+
+  .login-form {
+    display: flex;
+    position: absolute;
+    top: 10%;
+    flex-direction: column;
+    height: 350px;
+    width: 325px;
+    z-index: -1;
+  }
+
+  .login-form input {
+    width: 250px;
+    height: 35px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    margin-left: 35px;
+    padding: 2px;
+    border: 1px solid #E5E5E5;
+    border-radius: 6px;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+    padding-left: 10px;
+  }
+
+  .login-form label {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    width: 150px;
+    height: 18px;
+    margin-left: 35px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+
+  .login-button-large {
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    top: 63%;
+    background: #69C7BF;
+    box-shadow: 0px 4px 20px
+      rgba(26, 26, 26, 0.2);
+    border-radius: 50px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+    transition: .5s;
+  }
+
+  .login-button-large:hover {
+    cursor: pointer;
+    background-color:rgb(82, 156, 150);
+    transition: 1s;
+  }
+
+  .cancel-login {
+    z-index: -1;
+    position: absolute;
+    width: 50px;
+    height: 20px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    top: 79%;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 21px;
+    text-align: center;
+    text-decoration: none;
+    color: #69C7BF;
+    transition: 1s;
+  }
+
+  .cancel-login:hover {
+    cursor: pointer;
+    color:rgb(82, 156, 150);
+    transition: 1s;
+  }
+
+  /* ERROR HANDLING */
+
+  .login-error {
+    color: red;
+    text-align: center;
+    margin-top: 20px;
+  }
+  .error-form {
+    display: flex;
+    position: absolute;
+    top: 10%;
+    flex-direction: column;
+    height: 350px;
+    width: 325px;
+    z-index: -1;
+  }
+  .error-form input {
+    width: 250px;
+    height: 35px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    margin-left: 35px;
+    padding: 2px;
+    border: 1px solid #E5E5E5;
+    border-radius: 6px;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+    padding-left: 10px;
+    border: 1px solid red;
+  }
+
+  .error-form label {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    width: 150px;
+    height: 18px;
+    margin-left: 35px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
 }
 
-.login-form {
-  display: flex;
-  position: absolute;
-  top: 10%;
-  flex-direction: column;
-  height: 350px;
-  width: 325px;
-  z-index: -1;
-}
-
-.login-form input {
-  width: 250px;
-  height: 35px;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  margin-left: 35px;
-  padding: 2px;
-  border: 1px solid #E5E5E5;
-  border-radius: 6px;
-  font-weight: 300;
-  font-size: 13px;
-  line-height: 15px;
-  color: #5C5D5E;
-  padding-left: 10px;
-}
-
-.login-form label {
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 18px;
-  width: 150px;
-  height: 18px;
-  margin-left: 35px;
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
-
-.login-button-large {
-  position: absolute;
-  width: 200px;
-  height: 50px;
-  left: 50%;
-  transform: translate(-50%, 0%);
-  top: 63%;
-  background: #69C7BF;
-  box-shadow: 0px 4px 20px
-    rgba(26, 26, 26, 0.2);
-  border-radius: 50px;
-  font-family: 'Work Sans', sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 21px;
-  text-align: center;
-  color: #FFFFFF;
-  transition: .5s;
-}
-
-.login-button-large:hover {
-  cursor: pointer;
-  background-color:rgb(82, 156, 150);
-  transition: 1s;
-}
-
-.cancel-login {
-  z-index: -1;
-  position: absolute;
-  width: 50px;
-  height: 20px;
-  left: 50%;
-  transform: translate(-50%, 0%);
-  top: 75%;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 21px;
-  text-align: center;
-  text-decoration: none;
-  color: #69C7BF;
-  transition: 1s;
-}
-
-.cancel-login:hover {
-  cursor: pointer;
-  color:rgb(82, 156, 150);
-  transition: 1s;
-}
-
-/* ERROR HANDLING */
-
-.login-error {
-  color: red;
-  text-align: center;
-  margin-top: 20px;
-}
-.error-form {
-  display: flex;
-  position: absolute;
-  top: 10%;
-  flex-direction: column;
-  height: 350px;
-  width: 325px;
-  z-index: -1;
-}
-.error-form input {
-  width: 250px;
-  height: 35px;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  margin-left: 35px;
-  padding: 2px;
-  border: 1px solid #E5E5E5;
-  border-radius: 6px;
-  font-weight: 300;
-  font-size: 13px;
-  line-height: 15px;
-  color: #5C5D5E;
-  padding-left: 10px;
-  border: 1px solid red;
-}
-
-.error-form label {
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 18px;
-  width: 150px;
-  height: 18px;
-  margin-left: 35px;
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
-
-
-@media only screen and (width: 1050px) {
+@media only screen and (min-width: 600px) {
   .login-modal {
     position: absolute;
     width: 450px;
