--- a/src/LandingPage/SignUp/signUp.css
+++ b/src/LandingPage/SignUp/signUp.css
@@ -1,5 +1,5 @@
 
-
+@media only screen and (max-width: 599px) {
   .signup-modal {
     position: absolute;
     width: 325px;
@@ -24,7 +24,7 @@
     color: #5C5D5E;
     transform: translate(-50%, 0%);
     left: 50%;
-    top: 4%;
+    top: 6%;
   }
 
   .signup-modal #signup-form {
@@ -74,7 +74,7 @@
     position: absolute;
     width: 50px;
     height: 20px;
-    top: 71%;
+    top: 73%;
     left: 50%;
     transform: translate(-50%, 0%);
     font-size: 14px;
@@ -158,8 +158,9 @@
     position: absolute;
     top: 61%;
   }
+}
 
-@media only screen and (width: 1050px) {
+@media only screen and (min-width: 600px) {
   
   .signup-modal {
     position: absolute;
