--- a/src/LandingPage/landingpage.css
+++ b/src/LandingPage/landingpage.css
@@ -4,76 +4,78 @@
   font-style: normal;
 }
 
-.hero-img {
-  position: absolute;
-  width: 243px;
-  height: 63px;
-  left: 50%;
-  right: 50%;
-  transform: translate(-50%, 0%);
-  top: 15%;
+@media only screen and (max-width: 599px) {
+
+  .hero-img {
+    position: absolute;
+    width: 243px;
+    height: 63px;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+    top: 15%;
+  }
+
+  #placeholder-img {
+    position: absolute;
+    width: 205px;
+    height: 202px;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, 0%);
+    top: 30%
+  }
+
+  .signup-button {
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    top: 68%;
+    background: #69C7BF;
+    box-shadow: 0px 4px 20px
+      rgba(26, 26, 26, 0.2);
+    border-radius: 50px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+    transition: .5s;
+  }
+  .signup-button:hover {
+    cursor: pointer;
+    background-color:rgb(82, 156, 150);
+    transition: 1s;
+  }
+
+  .login-button {
+    z-index: -1;
+    position: absolute;
+    width: 60px;
+    height: 20px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    top: 75.5%;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 21px;
+    text-align: center;
+    text-decoration: none;
+    color: #69C7BF;
+    transition: .5s;
+  }
+  .login-button:hover {
+    cursor: pointer;
+    color:rgb(82, 156, 150);
+    transition: 1s;
+  }
 }
 
-#placeholder-img {
-  position: absolute;
-  width: 205px;
-  height: 202px;
-  left: 50%;
-  right: 50%;
-  transform: translate(-50%, 0%);
-  top: 30%
-}
-
-.signup-button {
-  position: absolute;
-  width: 200px;
-  height: 50px;
-  left: 50%;
-  transform: translate(-50%, 0%);
-  top: 68%;
-  background: #69C7BF;
-  box-shadow: 0px 4px 20px
-    rgba(26, 26, 26, 0.2);
-  border-radius: 50px;
-  font-family: 'Work Sans', sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 21px;
-  text-align: center;
-  color: #FFFFFF;
-  transition: .5s;
-}
-.signup-button:hover {
-  cursor: pointer;
-  background-color:rgb(82, 156, 150);
-  transition: 1s;
-}
-
-.login-button {
-  z-index: -1;
-  position: absolute;
-  width: 60px;
-  height: 20px;
-  left: 50%;
-  transform: translate(-50%, 0%);
-  top: 73.5%;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 21px;
-  text-align: center;
-  text-decoration: none;
-  color: #69C7BF;
-  transition: .5s;
-}
-.login-button:hover {
-  cursor: pointer;
-  color:rgb(82, 156, 150);
-  transition: 1s;
-}
-
-
-@media only screen and (width: 1050px) {
+@media only screen and (min-width: 650px) {
   * {
     box-sizing: border-box;
     font-family: 'Work Sans', sans-serif;
