--- a/src/LandingPage/SignUp/signUp.css
+++ b/src/LandingPage/SignUp/signUp.css
@@ -67,6 +67,23 @@
   .signup-modal #signup-form .signup-button {
     position: absolute;
     top: 61%;
+    left: 50%;
+    transform: translate(-50%);
+    width: 200px;
+    height: 50px;
+    
+    background: #69C7BF;
+    box-shadow: 0px 4px 20px
+      rgba(26, 26, 26, 0.2);
+    border-radius: 50px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+    transition: .5s;
   }
 
   .cancel {
