--- a/src/LandingPage/landingpage.css
+++ b/src/LandingPage/landingpage.css
@@ -38,6 +38,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
     margin-bottom: 100px;
     height: 100px;
     justify-content: space-around;
