--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -3,18 +3,21 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
   }
   html {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
+ 
   }
   .root {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
   }
   .app {
     width: 100%;
@@ -35,7 +38,6 @@
     flex-direction: row;
     height: 100%;
     width: 100%;
-
   }
 
   .main-dashboard {
@@ -55,12 +57,13 @@
     color: #094A59;
     width: 250px;
     text-align: center;
+    margin-top: 30px;
   }
 
   .add-button {
     width: 75px;
     height: 75px;
-    margin-top: 50px;
+    margin-top: 30px;
     background: #FFFFFF;
     border: 2.2px solid #69C7BF;
     box-sizing: border-box;
