--- a/src/Dashboards/MainDashboard/Modals/addmodal.css
+++ b/src/Dashboards/MainDashboard/Modals/addmodal.css
@@ -5,14 +5,19 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0%);
-    width: 350px;
-    height: 250px;
+    width: 320px;
+    height: 220px;
     background: #FFFFFF;
     box-shadow: 0px 4px 50px
       rgba(0,0,0,0.2);
     border-radius: 7px;
     z-index: 1;
     top: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
   }
 
   .add-instructions {
@@ -21,23 +26,19 @@
     line-height: 15px;
     text-align: center;
     color: #5C5D5E;
-    margin-top: 35px;
   }
 
   .addmodal-button-container {
     display: flex;
-    width: 300px;
+    width: 320px;
     flex-wrap: wrap;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, 0);
-    top: 15px;
+    justify-content: center;
+    margin-top: 20px;
   }
 
   .addmodal-buttons {
-    width: 135px;
-    height: 44px;
+    width: 120px;
+    height: 40px;
     background-color: #FFFFFF;
     border-radius: 9px;
     font-weight: 600;
@@ -46,7 +47,7 @@
     font-size: 15px;
     line-height: 18px;
     text-align: center;
-    margin: 7px;
+    margin: 4px;
     transition: .5s;
   }
 
@@ -60,8 +61,9 @@
   .cancel-add {
     color: #69C7BF;
     text-align: center;
-    margin-top: 45px;
+    margin-top: 15px;
     transition: .3s;
+    margin-bottom: -10px;
   }
 
   .cancel-add:hover {
