--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -3,6 +3,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    -moz-appearance: none;
+    -webkit-appearance: none;
   }
   html {
     width: 100%;
