--- a/src/Dashboards/activitydash.css
+++ b/src/Dashboards/activitydash.css
@@ -20,6 +20,7 @@
     flex-direction: row;
     height: 100%;
     width: 100%;
+    z-index: -4;
   }
   .activity-dash {
     width: 100%;
@@ -99,7 +100,7 @@
   }
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 601px) {
   body {
     width: 100%;
     height: 100%;
