--- a/src/Dashboards/activitydash.css
+++ b/src/Dashboards/activitydash.css
@@ -12,7 +12,7 @@
     justify-content: space-evenly;
     z-index: -3;
     margin-top: 20px;
-    margin-bottom: 100px;
+    margin-bottom: 10px;
   }
 
   .activity-dash-container {
@@ -24,7 +24,7 @@
   }
   .activity-dash {
     width: 100%;
-    height: 100%;
+    height: fit-content;
     background-color: white;
     z-index: -2;
     display: flex;
@@ -94,11 +94,9 @@
   }
 
   .bottom-div {
-    min-height: 100px;
+    min-height: 55px;
     width: 100%;
     background-color: white;
-    position: absolute; 
-    bottom: 0;
   }
 }
 
@@ -132,6 +130,7 @@
     margin-top: 200px; /* change to 200px */
     align-items: center;
     justify-content: flex-start;
+
   }
 
   .activity-dash h1 {
