--- a/src/ActivityCards/Activity.css
+++ b/src/ActivityCards/Activity.css
@@ -5,7 +5,7 @@
     background: white;
     padding: 20px;
     width: 340px;
-    height: auto;
+    min-height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -13,12 +13,14 @@
     position: relative;
     z-index: 1;
     margin: 10px;
+    overflow: auto;
   }
 
   .activity-title {
     font-size: 20px;
     line-height: 19px;
     font-weight: 600;
+    margin-bottom: 5px;
     color: #094a59;
     margin-top: 5px;
   }
@@ -26,6 +28,7 @@
   .activity-genre {
     height: auto;
     width: fit-content;
+    margin-bottom: 5px;
     min-width: 60px;
     padding: 5px 12px;
     background-color: #5c5d5e;
@@ -75,6 +78,7 @@
     font-size: 13px;
     width: 300px;
     line-height: 17px;
+    margin-bottom: 5px;
     color: #5c5d5e;
   }
   .activity-deletebutton {
