--- a/src/Dashboards/activitydash.css
+++ b/src/Dashboards/activitydash.css
@@ -1,4 +1,16 @@
 @media only screen and (min-width: 1200px) {
+  .activity-results {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    z-index: 3;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    padding-left: 30px;
+  }
+
   body {
     width: 100%;
     height: 100%;
@@ -9,7 +21,9 @@
     flex-direction: row;
     height: 100%;
     width: 100%;
+    margin-top: 100px;
     justify-content: center;
+    height: fit-content;
   }
 
   .activity-dash {
@@ -25,7 +39,7 @@
     display: flex;
     width: 300px;
     position: static;
-    margin-top:-20px; /* change to 200px */
+    margin-top: -20px; /* change to 200px */
     align-items: center;
     justify-content: flex-start;
   }
@@ -35,6 +49,7 @@
     font-size: 30px;
     line-height: 35px;
     color: #094a59;
+    margin-top: 120px;
     margin-left: -200px;
   }
 
@@ -70,18 +85,6 @@
     color: #ffffff;
     cursor: pointer;
     transition: 0.5s;
-  }
-
-  .activity-results {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    width: 100%;
-    justify-content: center;
-    z-index: 3;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    padding-left: 30px;
   }
 
   .randomdiv {
