--- a/src/LandingPage/landingpage.css
+++ b/src/LandingPage/landingpage.css
@@ -29,10 +29,12 @@
     height: 63px;
     margin-top: 20px;
   }
+
   .video {
     width: 85%;
     height: 25%;
     margin-bottom: 0px;
+    margin-top: -50px;
   }
   .signinbuttons {
     display: flex;
@@ -65,29 +67,50 @@
     background-color: rgb(82, 156, 150);
     transition: 1s;
   }
-  .howtouse-button {
+  .login-button {
     width: 200px;
     height: 50px;
-    background: #69c7bf;
+    background: white;
     box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
     border-radius: 50px;
+    border: 2px solid #69c7bf;
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
+    color: #69c7bf;
     line-height: 21px;
     text-align: center;
     color: #ffffff;
     transition: 0.5s;
-    margin-top: -30px;
   }
-  .howtouse-button:hover {
+
+  .login-button:hover {
     cursor: pointer;
-    background-color: rgb(82, 156, 150);
+    background-color: #69c7bf;
     transition: 1s;
   }
 
-  .login-button {
+  .howtouse-button {
+    width: 200px;
+    height: 50px;
+    margin-top: -60px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #69c7bf;
+    transition: 0.5s;
+  }
+  .howtouse-button:hover {
+    cursor: pointer;
+    transition: 1s;
+  }
+
+  .demo-button {
     z-index: 1;
     width: 60px;
     height: 20px;
@@ -99,10 +122,27 @@
     color: #69c7bf;
     transition: 0.5s;
   }
-  .login-button:hover {
+  .demo-button:hover {
     cursor: pointer;
     color: rgb(82, 156, 150);
     transition: 1s;
+  }
+  .success-screen {
+    width: 50%;
+    height: 15%;
+    border: solid 3px #69c7bf;
+    margin-left: 50%;
+    transform: translate(-50%);
+    position: absolute;
+    margin-top: 20px;
+    z-index: 500;
+    background-color: white;
+    text-align: center;
+    transform: translate(-50%);
+  }
+  .success-screen p {
+    font-size: 30px;
+    margin-top: 5%;
   }
 }
 
@@ -131,7 +171,12 @@
     height: 100%;
     align-items: center;
   }
-
+  .video {
+    height: 70%;
+    height: 40%;
+    margin-bottom: 0px;
+    margin-top: -100px;
+  }
   .hero-img {
     width: 293px;
     height: 73px;
@@ -142,9 +187,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100px;
+    height: 150px;
     margin-top: -30px;
-    justify-content: space-around;
+    justify-content: space-between;
   }
   .signup-button {
     width: 200px;
@@ -158,6 +203,7 @@
     font-size: 18px;
     line-height: 21px;
     text-align: center;
+    border: none;
     color: #ffffff;
     transition: 0.5s;
   }
@@ -167,29 +213,66 @@
     transition: 1s;
   }
 
-  .howtouse-button {
+  .login-button {
     width: 200px;
     height: 50px;
-    background: #69c7bf;
+    background: white;
     box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
     border-radius: 50px;
+    border: 2px solid #69c7bf;
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
+    color: #69c7bf;
     line-height: 21px;
     text-align: center;
-    color: #ffffff;
     transition: 0.5s;
-    margin-top: -30px;
+  }
+
+  .login-button:hover {
+    cursor: pointer;
+    background-color: #69c7bf;
+    transition: 1s;
+    color: white;
+  }
+
+  .howtouse-button {
+    width: 200px;
+    height: 50px;
+    margin-top: -70px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #69c7bf;
+    transition: 0.5s;
   }
   .howtouse-button:hover {
     cursor: pointer;
-    background-color: rgb(82, 156, 150);
     transition: 1s;
   }
+  .success-screen {
+    width: 30%;
+    height: 15%;
+    border: solid 3px #69c7bf;
+    left: 50%;
+    transform: translate(-50%);
+    position: absolute;
 
-  .login-button {
+    z-index: 500;
+    background-color: white;
+    text-align: center;
+  }
+  .success-screen p {
+    font-size: 20px;
+    margin-top: 1%;
+  }
+
+  .demo-button {
     z-index: 1;
     width: 60px;
     height: 20px;
@@ -201,7 +284,7 @@
     color: #69c7bf;
     transition: 0.5s;
   }
-  .login-button:hover {
+  .demo-button:hover {
     cursor: pointer;
     color: rgb(82, 156, 150);
     transition: 1s;
